[tool.poetry]
name = "organage"
version = "0.4.0"
description = "A package to pestimate organ-specific biological age using SomaScan plasma proteomics data"
authors = ["Hamilton Oh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
dill = ">=0.3.6"
pandas = ">=1.5.3"
scikit-learn = "1.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
seaborn = "^0.12.2"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
